# Distractor_software-

./: .gitignore  English_sample.txt  FUTURE_REFACTOR_PLAN.md  LICENSE  README.md  arabic.txt  arabic_sample.txt  assess_de_output.py  assess_output.py  distract.py  distractor.py  distractors.csv  download_model.py  evaluate_casing_direct2.py  exclude.txt  exclude_ar.txt  exclude_de.txt  find_silence.py  fix_output_casing.py  fix_script.py  german.txt  german_pos_cache.json  german_pos_cache_v2.json  german_sample.txt  ibexify.py  include_de.txt  input.py  inspect_pos.py  lang_model.py  limit_repeats.py  list.txt  main.py  output.py  output.txt  params.txt  params_ar.txt  params_de.txt  params_en.txt  precompute_pos.py  pyproject.toml  (+14 more)
.github/workflows/: smoke-test.yml
config/: exclude.txt  params.txt  params_de.txt
data/german_data/: vocab.txt  wordfreq_de.tsv
docs/wiki/: Config-Reference.md  Home.md  Ibex-Integration.md  Troubleshooting.md  Usage.md  Wiki-Workflow.md  _Sidebar.md
examples/: eng.txt  eng_out.txt  german_sample.csv  output.txt  sample.csv  sample_output.csv  test_output.txt
models/: __init__.py
models/arabic_code/: __init__.py  arabic_pos_cache.json  model.py
models/dbmdz-german-gpt2/: config.json  tokenizer.json  vocab.json
models/dbmdz-german-gpt2/onnx/: added_tokens.json  config.json  decoder_model.onnx  decoder_model_merged.onnx  decoder_with_past_model.onnx  merges.txt  tokenizer.json  tokenizer_config.json
models/english_code/: __init__.py  english_pos_cache.json  model.py
models/german_code/: __init__.py  german_pos_cache_v2.json  model.py
scripts/: generate_v2_cache.py  maintenance_ar.py  maintenance_de.py  maintenance_en.py  plot_semantic_histogram.py  smoke_test.py  smoke_test.sh  wiki_sync.sh
