[project]
name = "maze-automate"
version = "0.1.0"
description = "Maze-style distractor stimulus generator for psycholinguistic experiments in English, German, and Arabic"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub==0.30.2",
    "nltk==3.9.3",
    "spacy==3.8.11",
    "torch==2.7.1+cu118",
    "transformers==4.52.4",
    "wordfreq==3.1.1",
    "en-core-web-lg",
    "fasttext==0.9.3",
    "numpy==2.4.2",
    "scipy==1.17.1",
    "farasapy==0.0.14",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "blis==1.3.3",
    "catalogue==2.0.10",
    "certifi==2022.12.7",
    "charset-normalizer==2.1.1",
    "click==8.3.1",
    "cloudpathlib==0.23.0",
    "confection==0.1.5",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "cymem==2.0.13",
    "filelock==3.24.3",
    "fonttools==4.62.1",
    "fsspec==2026.2.0",
    "ftfy==6.3.1",
    "h11==0.16.0",
    "hf-xet==1.3.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.4",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "langcodes==3.5.1",
    "locate==1.1.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "murmurhash==1.0.15",
    "networkx==3.6.1",
    "nvidia-cublas-cu11==11.11.3.6",
    "nvidia-cuda-cupti-cu11==11.8.87",
    "nvidia-cuda-nvrtc-cu11==11.8.89",
    "nvidia-cuda-runtime-cu11==11.8.89",
    "nvidia-cudnn-cu11==9.1.0.70",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.3.0.86",
    "nvidia-cusolver-cu11==11.4.1.48",
    "nvidia-cusparse-cu11==11.7.5.86",
    "nvidia-nccl-cu11==2.21.5",
    "nvidia-nvtx-cu11==11.8.86",
    "packaging==24.1",
    "pillow==12.1.1",
    "preshed==3.0.12",
    "pybind11==3.0.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.2.28",
    "requests==2.28.1",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "setuptools==70.2.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.5.1",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.2",
    "stanza==1.8.2",
    "sympy==1.14.0",
    "thinc==8.3.10",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "tqdm==4.66.5",
    "triton==3.3.1",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==1.26.13",
    "wasabi==1.1.3",
    "wcwidth==0.6.0",
    "weasel==0.4.3",
    "wrapt==2.1.1",
    "de-core-news-sm",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl" }
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
