[project]
name = "maze-automate"
version = "0.1.0"
description = "Maze-style distractor stimulus generator for psycholinguistic experiments in English, German, and Arabic"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.20.0",
    "nltk>=3.8.0",
    "spacy>=3.5.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "wordfreq>=3.0.0",
    "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "fasttext>=0.9.3",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "farasapy>=0.0.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["wiki*", "models*"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
