[project]
name = "maze-automate"
version = "0.1.0"
description = "Maze-style distractor stimulus generator for psycholinguistic experiments in English, German, and Arabic"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.20.0",
    "spacy>=3.5.0",
    "numpy>=2.0.0",
    "wordfreq>=3.0.0",
    "fasttext>=0.9.2",
    "stanza>=1.8.0",
    "farasapy>=0.0.14",
    "nltk>=3.8.0",
    "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "de_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl",
]

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["wiki*", "models*"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
